# sai2-model

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  SAI-MODELConfig.cmake.in  install.sh
.github/: CODEOWNERS
.github/actions/build-repo/: action.yml
.github/workflows/: build_and_test.yml  generate_documentation.yml  upload_artifact.yml  upload_artifact_on_schedule.yml  verify_PR.yml
docs/: Doxyfile
examples/: CMakeLists.txt
examples/00-test/: CMakeLists.txt  main.cpp  rrbot.urdf
examples/00-test_timing_jacobian/: CMakeLists.txt  main.cpp  panda_arm.urdf
examples/01-create_model_from_file/: CMakeLists.txt  main.cpp
examples/02-update_model/: CMakeLists.txt  main.cpp  toro.urdf
examples/03-parse_joint_limits/: CMakeLists.txt  main.cpp
examples/03-spherical_joints/: CMakeLists.txt  main.cpp  rpspsbot.urdf
examples/04-joint_limits/: CMakeLists.txt  main.cpp  rpspbot.urdf
examples/05-grasp_matrix/: CMakeLists.txt  linkage.urdf  main.cpp
examples/06-add_load/: CMakeLists.txt  main.cpp  rprbot.urdf
examples/06-panda_test/: CMakeLists.txt  main.cpp  panda_arm.urdf
examples/06-robot_arms/: CMakeLists.txt  main.cpp
examples/07-panda_test/: CMakeLists.txt  main.cpp  rppbot.urdf
examples/08-add_load/: CMakeLists.txt  rprbot_load.urdf
html/: JointLimits_8h_source.html  RBDLExtensions_8h_source.html  Sai2ModelParserUtils_8h_source.html  Sai2Model_8h_source.html  SaiModelParserUtils_8h_source.html  SaiModel_8h_source.html  UrdfToSai2Model_8h_source.html  UrdfToSaiModel_8h_source.html  annotated.html  classSai2Model_1_1Sai2Model-members.html  classSai2Model_1_1Sai2Model.html  classSaiModel_1_1SaiModel-members.html  classSaiModel_1_1SaiModel.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6cd8491d143eb218b70983dbdb3c58bc.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js  structSai2Model_1_1ContactModel-members.html  structSai2Model_1_1ContactModel.html  structSai2Model_1_1ForceSensorData-members.html  structSai2Model_1_1ForceSensorData.html  structSai2Model_1_1GraspMatrixData-members.html  structSai2Model_1_1GraspMatrixData.html  structSai2Model_1_1JointLimit-members.html  structSai2Model_1_1JointLimit.html  structSai2Model_1_1LinkMassParams-members.html  structSai2Model_1_1LinkMassParams.html  structSai2Model_1_1OpSpaceMatrices-members.html  structSai2Model_1_1OpSpaceMatrices.html  structSai2Model_1_1SphericalJointDescription-members.html  structSai2Model_1_1SphericalJointDescription.html  structSaiModel_1_1ContactModel-members.html  structSaiModel_1_1ContactModel.html  structSaiModel_1_1ForceSensorData-members.html  structSaiModel_1_1ForceSensorData.html  (+10 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+23 more)
rbdl/: CMakeLists.txt
rbdl/include/rbdl/: Body.h  Kinematics.h  rbdl_eigenmath.h
rbdl/src/: Dynamics.cc  Kinematics.cc
rbdl/tests/: KinematicsTests.cc
src/: JointLimits.h  RBDLExtensions.cpp  RBDLExtensions.h  RBDLModel.cpp  RBDLModel.h  Sai2Model.cpp  Sai2Model.h  SaiModel.cpp
src/parser/: Sai2ModelParserUtils.cpp  Sai2ModelParserUtils.h  SaiModelParserUtils.h  URDFToRBDLModel.cpp  UrdfToSai2Model.cpp  UrdfToSai2Model.h  UrdfToSaiModel.cpp  UrdfToSaiModel.h
tests/: CMakeLists.txt  Tests_Sai2Model.cpp  Tests_SaiModel.cpp
tests/urdf/: rpsprbot.urdf  rrbot.urdf  rrpbot.urdf
urdf_models/HRP4C/: HRP4C_custom_v1.urdf  HRP4Cmain.urdf
urdf_models/HRP4C/meshes/: BODY_mesh.mtl  CHEEK_P_LINK_mesh.mtl  CHEST_P_LINK_mesh.mtl  CHEST_R_LINK_mesh.mtl  CHEST_Y_LINK_mesh.mtl  EYEBROW_P_LINK_mesh.mtl  EYELID_P_LINK_mesh.mtl  EYE_P_LINK_mesh.mtl  EYE_Y_LINK_mesh.mtl  LOWERLIP_P_LINK_mesh.mtl  L_ANKLE_P_LINK_mesh.mtl  L_ANKLE_R_LINK_mesh.mtl  L_ELBOW_P_LINK_mesh.mtl  L_HAND_J0_LINK_mesh.mtl  L_HAND_J1_LINK_mesh.mtl  L_HIP_P_LINK_mesh.mtl  L_HIP_R_LINK_mesh.mtl  L_HIP_Y_LINK_mesh.mtl  L_KNEE_P_LINK_mesh.mtl  L_SHOULDER_P_LINK_mesh.mtl  L_SHOULDER_R_LINK_mesh.mtl  L_SHOULDER_Y_LINK_mesh.mtl  L_WRIST_R_LINK_mesh.mtl  L_WRIST_Y_LINK_mesh.mtl  MOUTH_P_LINK_mesh.mtl  NECK_P_LINK_mesh.mtl  NECK_R_LINK_mesh.mtl  NECK_Y_LINK_mesh.mtl  R_ANKLE_P_LINK_mesh.mtl  R_ANKLE_R_LINK_mesh.mtl  R_ELBOW_P_LINK_mesh.mtl  R_HAND_FINGERS_mesh.mtl  R_HAND_J0_LINK_mesh.mtl  R_HAND_J1_LINK_mesh.mtl  R_HIP_P_LINK_mesh.mtl  R_HIP_R_LINK_mesh.mtl  R_HIP_Y_LINK_mesh.mtl  R_KNEE_P_LINK_mesh.mtl  R_SHOULDER_P_LINK_mesh.mtl  R_SHOULDER_R_LINK_mesh.mtl  (+4 more)
urdf_models/allegro_hand/: allegro_hand_left.urdf  allegro_hand_right.urdf
urdf_models/allegro_hand/meshes/: base_link.mtl  base_link_left.mtl  link0.mtl  link3.mtl  link4.mtl  link6.mtl  link_0.0.mtl  link_12.0_left.mtl  link_12.0_right.mtl  link_13.0.mtl  link_14.0.mtl  link_15.0.mtl  link_15.0_tip.mtl  link_2.0.mtl  link_3.0.mtl  link_3.0_tip.mtl
urdf_models/fr3/: fr3.urdf
urdf_models/fr3/meshes/visual/: link0.mtl  link1.mtl  link2.mtl  link3.mtl  link4.mtl  link5.mtl  link6.mtl  link7.mtl
urdf_models/iiwa7/: kuka_iiwa.urdf
urdf_models/iiwa7/meshes/: base.dae  base.mtl  link0.dae  link0.mtl  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae
urdf_models/panda/: panda_arm.urdf  panda_arm_allegro_left.urdf  panda_arm_allegro_right.urdf  panda_arm_box.urdf  panda_arm_gripper.urdf  panda_arm_sphere.urdf
urdf_models/panda/meshes/collision/: link6.mtl  link7.mtl
urdf_models/panda/meshes/visual/: finger.mtl  hand.mtl  link1.mtl  link2.mtl  link5.mtl  link7.mtl
urdf_models/puma/: puma.urdf
urdf_models/simple_models/: double_pendulum.urdf  rbot.urdf  simple_pendulum.urdf
